Fix animation on mobile

--- a/src/Components/Mortgage/Results/Results.module.scss
+++ b/src/Components/Mortgage/Results/Results.module.scss
@@ -41,6 +41,10 @@
         bottom: 0;
         right: 0;
         width: 250px;
+        @media all and (max-width: 768px){
+            right: 10px;
+            width: 80px;
+        }
     }
 
     &--center{
@@ -48,6 +52,12 @@
         right: 50%;
         transform: translate(50%, 50%);
         max-width: 400px;
+        @media all and (max-width: 768px){
+            bottom: 0;
+            right: 10px;
+            width: 80px;
+            transform: unset;
+        }
     }
 
     &--animate{
